# real-retail-forecasting

./: .gitignore  ATTRIBUTION.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
data/processed/: daily_top50.parquet
docs/: DATA_DECISIONS.md  REAL_VS_SYNTHETIC.md  RESULTS.md
reports/: metrics.json
scripts/: build_dataset.py  download_data.py  eda.py  run_eval.py
sql/: demand_analysis.sql
src/real_retail/data/: aggregate.py  clean.py  download.py  load.py
src/real_retail/evaluate/: metrics.py  split.py
src/real_retail/features/: build.py
src/real_retail/models/: baseline.py  lgbm.py
tests/: conftest.py  test_baseline.py  test_clean.py  test_metrics.py  test_split.py
